# rust_requester

./: Cargo.toml  README.md
src/: configuration.rs  db.rs  label.rs  main.rs  process.rs
src/cli/: README.md  main.rs
src/gui/: config_input.rs  config_inputs.rs  label_request_panel.rs  main.rs  message.rs
src/gui/resources/: mod.rs
src/gui/resources/icons/: mod.rs
src/lib/: configuration.rs  db.rs  error.rs  label.rs  lib.rs  localhost_oauth_server.rs  process.rs  request.rs
src/lib/configuration/: mod.rs  port.rs
