[package]
name = "rust_requester"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
oauth2 = "4.3.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
rustyline = "10.0.0"
serde_json = "1.0.89"
serde = "1.0.149"
postcard = { version = "1.0.2", features = ["use-std"] }