[package]
name = "rust_requester"
version = "2.1.0"
edition = "2021"

[lib]
name = "rust_requester"
path = "src/lib/lib.rs"

[[bin]]
name = "rust_requester_gui"
path = "src/gui/main.rs"

[[bin]]
name = "rust_requester_cli"
path = "src/cli/main.rs"

[dependencies]
reqwest = "0.11.13"
oauth2 = "4.3.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
webbrowser = "0.8.6"
rustyline = "10.0.0"
serde_json = "1.0.89"
serde = "1.0.149"
tokio = { version = "1", features = ["full"] }
iced = { version = "0.7", features = ["image", "tokio"] }
postcard = { version = "1.0.2", features = ["use-std"] }
clap = { version = "4.1.1", features = ["derive"] }
